# QuantClaw

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.test  README.md  README_CN.md  config.example.json  orchestrate_test.py  run_tests.sh  vcpkg.json
.github/workflows/: ci-hardening.yml  codeql-analysis.yml  docker-publish.yml  github-actions.yml  release-hardening.yml  release.yml
adapters/: package.json
assets/skills/bug-bounty-header-analysis/: SKILL.md
assets/skills/bug-bounty-port-scanning/: SKILL.md
assets/skills/bug-bounty-recon/: SKILL.md
assets/skills/bug-bounty-subdomain-enum/: SKILL.md
assets/skills/okx-instruments/: SKILL.md
assets/skills/okx-trading/: SKILL.md
include/gtest/: gtest.h
include/quantclaw/: builtin_skills.hpp  config.hpp  constants.hpp
include/quantclaw/auth/: github_copilot_auth.hpp
include/quantclaw/channels/: adapter_manager.hpp  channel_base.hpp  channel_policy.hpp
include/quantclaw/cli/: agent_commands.hpp  gateway_commands.hpp  mcp_commands.hpp  onboard_commands.hpp  session_commands.hpp
patches/turboquant/: 0001-turboquant.patch  UPSTREAM_SHA
scripts/: Dockerfile  README.md  build.sh  env.example.txt  format-code.sh  gateway-manual.bat  gateway-setup-windows.ps1  install.sh  precompile_gcm_cache.cmake  qwen36_turboquant_evolve.ipynb  release.sh  start_gateway_and_scan.sh  turboquant_collect_activations.py  turboquant_encode.py
sidecar/: package-lock.json  package.json
sidecar/src/: index.ts  local-provider.ts  types.ts
sidecar/test/: local-provider.test.ts  rpc-methods.test.ts
src/: builtin_skills.cppm  config.cppm  constants.cppm  main.cpp
src/adapters/: discord.ts  feishu.ts  package-lock.json  package.json  qq.ts  telegram.ts
src/auth/: github_copilot_auth.cpp  openai_codex_auth.cpp  provider_auth.cpp
src/channels/: adapter_manager.cpp  adapter_manager.cppm  channel_policy.cpp  channel_policy.cppm
src/cli/: agent_commands.cpp  agent_commands.cppm  cli_manager.cpp  cli_manager.cppm  commands.cpp  gateway_commands.cpp  gateway_commands.cppm  model_auth_commands.cpp  onboard_commands.cpp  onboard_commands.cppm  session_commands.cpp  session_commands.cppm
src/common/: defer.cppm  noncopyable.cppm  parse_util.cppm  string_util.cppm
src/core/: agent_loop.cpp  agent_loop.cppm  config.cpp  content_block.cppm  context_engine.cppm  context_pruner.cpp  context_pruner.cppm  cron_scheduler.cpp  cron_scheduler.cppm  dag_runtime.cpp  dag_runtime.cppm  default_context_engine.cpp  default_context_engine.cppm  evolve_runtime.cpp  evolve_runtime.cppm  memory_manager.cpp  memory_manager.cppm  memory_search.cpp  memory_search.cppm  message_commands.cpp  message_commands.cppm  mmr_reranker.cpp  mmr_reranker.cppm  multi_stage_compaction.cpp  multi_stage_compaction.cppm  prompt_builder.cpp  prompt_builder.cppm  recon_runtime.cpp  recon_runtime.cppm  session_compaction.cpp  session_compaction.cppm  signal_handler.cpp  signal_handler.cppm  skill_loader.cpp  skill_loader.cppm  subagent.cpp  subagent.cppm  temporal_decay.cpp  temporal_decay.cppm  usage_accumulator.cpp  (+3 more)
src/gateway/: command_queue.cpp  command_queue.cppm  daemon_manager.cpp  daemon_manager.cppm  gateway_client.cpp  gateway_client.cppm  gateway_server.cpp  gateway_server.cppm  protocol.cppm  rpc_handlers.cpp  rpc_handlers.cppm
src/mcp/: mcp_client.cpp  mcp_client.cppm  mcp_server.cpp  mcp_server.cppm  mcp_tool_manager.cpp  mcp_tool_manager.cppm  quantclaw_mcp_tools.cppm
src/platform/: ipc.cppm  ipc_tcp.cpp  process.cppm  process_unix.cpp  process_win32.cpp  service.cppm  service_unix.cpp  service_win32.cpp
src/plugins/: hook_manager.cpp  hook_manager.cppm  plugin_manifest.cpp  plugin_manifest.cppm  plugin_registry.cpp  plugin_registry.cppm  plugin_system.cpp  plugin_system.cppm  sidecar_manager.cpp  sidecar_manager.cppm
src/providers/: anthropic_provider.cpp  anthropic_provider.cppm  cooldown_tracker.cpp  cooldown_tracker.cppm  curl_raii.cpp  curl_raii.cppm  embedding_provider.cppm  failover_resolver.cpp  failover_resolver.cppm  github_copilot_provider.cpp  llama_provider.cppm  llm_provider.cppm  openai_provider.cpp  provider_error.cpp  provider_error.cppm  provider_registry.cpp  provider_registry.cppm  stream_normalization.cpp
src/security/: exec_approval.cpp  exec_approval.cppm  rate_limiter.cpp  rate_limiter.cppm  rbac.cpp  rbac.cppm  sandbox.cpp  sandbox.cppm  scope_validator.cpp  scope_validator.cppm  tool_permissions.cpp  tool_permissions.cppm
src/session/: session_maintenance.cpp  session_maintenance.cppm  session_manager.cpp  session_manager.cppm
src/tools/: browser_tool.cpp  browser_tool.cppm  tool_chain.cpp  tool_chain.cppm  tool_registry.cpp  tool_registry.cppm
src/web/: api_routes.cpp  api_routes.cppm  web_server.cpp  web_server.cppm
tests/: e2e_test.sh  smoke_test.sh  test-install-script.sh  test_advanced_features.cpp  test_agent_commands.cpp  test_agent_loop.cpp  test_anthropic_provider.cpp  test_api_routes.cpp  test_browser_tool.cpp  test_builtin_skills.cpp  test_channel_policy.cpp  test_cli_commands.cpp  test_command_queue.cpp  test_common_utils.cpp  test_config.cpp  test_context_engine.cpp  test_context_management.cpp  test_daemon_manager.cpp  test_dag_runtime.cpp  test_e2e.cpp  test_evolve_runtime.cpp  test_exec_approval.cpp  test_failover.cpp  test_gateway.cpp  test_github_copilot_auth.cpp  test_github_copilot_provider.cpp  test_helpers.cppm  test_helpers.hpp  test_helpers_platform.h  test_hybrid_memory_search.cpp  test_llama_provider.cpp  test_main.cpp  test_mcp_client.cpp  test_mcp_integration.cpp  test_mcp_server.cpp  test_mcp_tool_manager.cpp  test_memory_manager.cpp  test_message_commands.cpp  test_multi_stage_compaction.cpp  test_openai_provider.cpp  (+23 more)
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/ui/: app-chat.ts  app.ts  (+7 more)
website/: index.md  package-lock.json  package.json
website/guide/: architecture.md  building.md  cli-reference.md  contributing.md  documentation.md  features.md  getting-started.md  installation.md
website/zh/: index.md
(+75 files in other folders)
